--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@formspree/react": "^2.5.1",
-    "firebase": "^10.7.1",
+    "dotenv": "^17.2.0",
+    "firebase": "^10.14.1",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^10.16.16",
     "html2pdf.js": "^0.10.1",
     "lucide-react": "^0.344.0",
